<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/calc_background_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calc_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_value"
        android:textColor="@color/white"
        android:textSize="@dimen/calc_result_size"
        app:layout_constraintBottom_toTopOf="@id/calc_keyboard_grid_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/intermediate_value_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_corner_action_value"
        android:textSize="@dimen/calc_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12345" />

    <TextView
        android:id="@+id/intermediate_action_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_corner_action_value"
        android:textSize="@dimen/calc_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intermediate_value_number"
        tools:text="%" />

    <GridLayout
        android:id="@+id/calc_keyboard_grid_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_one"
            style="@style/ButtonAction.Number"
            android:text="@string/key_one" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_two"
            style="@style/ButtonAction.Number"
            android:text="@string/key_two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_three"
            style="@style/ButtonAction.Number"
            android:text="@string/key_three" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            style="@style/ButtonAction"
            android:text="@string/key_plus" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_four"
            style="@style/ButtonAction.Number"
            android:text="@string/key_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_five"
            style="@style/ButtonAction.Number"
            android:text="@string/key_five" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_six"
            style="@style/ButtonAction.Number"
            android:text="@string/key_six" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            style="@style/ButtonAction"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_seven"
            style="@style/ButtonAction.Number"
            android:text="@string/key_seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_eight"
            style="@style/ButtonAction.Number"
            android:text="@string/key_eight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_nine"
            style="@style/ButtonAction.Number"
            android:text="@string/key_nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multiply"
            style="@style/ButtonAction"
            android:text="@string/key_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_zero"
            style="@style/ButtonAction.Number"
            android:backgroundTint="@color/calc_gray"
            android:text="@string/key_zero" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            style="@style/ButtonAction"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_clear"
            style="@style/ButtonAction"
            android:text="@string/key_clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_divide"
            style="@style/ButtonAction"
            android:text="@string/key_divide" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_return"
            style="@style/ButtonAction"
            android:layout_columnSpan="4"
            android:layout_columnWeight="4"
            android:layout_marginStart="@dimen/margin_keyboard"
            android:text="@string/key_return" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>